Bug 446795 - Warning about failed sanity check on y)_Texture_Wood_Fiber.kpp
Summary: Warning about failed sanity check on y)_Texture_Wood_Fiber.kpp
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (show other bugs)
Version: 5.0.0-beta2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL: https://krita-artists.org/t/missing-t...
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-10 17:21 UTC by wolthera
Modified: 2022-09-20 11:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2021-12-10 17:21:06 UTC
SUMMARY
When renaming y)_Texture_Wood_Fiber.kpp I get the following warning message:

WARNING: KisResourceLocator::loadRequiredResources failed to sanity check the embedded resource:
         parent resource: KoResourceSignature("paintoppresets", "", "y)_Texture_Wood_Fiber.kpp", "y) Texture Wood Fiber")
         embedded resource: KoResourceSignature("patterns", "040f5589c1d219d1eb4dcc86802fe631", "4-paper-soft-grain_testdark-black15.png", "4-paper-soft-grain_testdark-black15.png")

Dmitry asked me to report this.
Comment 1 amyspark 2021-12-10 17:29:02 UTC
Also reported on K-A.
Comment 2 amyspark 2021-12-10 17:30:32 UTC
A quick Google Search tells me this pattern originally belonged to deevad's brushkit: https://www.davidrevoy.com/article264/brushkit-v7-0

Is this pattern really embedded? or is the bundle's signature incorrect?
Comment 3 Dmitry Kazakov 2021-12-14 13:16:42 UTC
Well, this bug is not a release_blocker in any way. It just means that MD5 written in the metadata for the embedded resource does not coincide with the actual embedded data included. If you see this warning, then the workaround routine has been triggered. So it should be safe for the user to use this resource.

I don't yet know what to do with this bug/warning. We have two options:

1) Fix our presets and keep the warning.

2) Don't fix our presets, but remove the warning.

I guess in the end we will end up with the second approach, I'm just not sure about that yet.
Comment 4 Halla Rempt 2022-09-20 11:35:13 UTC
I think we should remove the warning, since there is a working fallback.
Comment 5 Halla Rempt 2022-09-20 11:36:17 UTC
Git commit daaf7cc1f1612481249cfbde29d39be69630e449 by Halla Rempt.
Committed on 20/09/2022 at 11:35.
Pushed by rempt into branch 'master'.

Remove warning

There is a workaround to the issue, so we don't need to worry
people.

M  +1    -6    libs/resources/KisResourceLocator.cpp

https://invent.kde.org/graphics/krita/commit/daaf7cc1f1612481249cfbde29d39be69630e449
Comment 6 Halla Rempt 2022-09-20 11:36:33 UTC
Git commit 3f503fe3fb8b1b3c4ed6328036eb332f719d4ad0 by Halla Rempt.
Committed on 20/09/2022 at 11:36.
Pushed by rempt into branch 'krita/5.1'.

Remove warning

There is a workaround to the issue, so we don't need to worry
people.
(cherry picked from commit daaf7cc1f1612481249cfbde29d39be69630e449)

M  +1    -6    libs/resources/KisResourceLocator.cpp

https://invent.kde.org/graphics/krita/commit/3f503fe3fb8b1b3c4ed6328036eb332f719d4ad0