Remove warning

There is a workaround to the issue, so we don't need to worry
people.

BUG:446795
(cherry picked from commit daaf7cc1f1612481249cfbde29d39be69630e449)